--- a/app/index-async.html
+++ b/app/index-async.html
@@ -31,13 +31,13 @@
       'bower_components/angular/angular.js',
       'bower_components/angular-route/angular-route.js',
       'app.js',
-      'view1/view1.js',
+      'actors-search/view.js',
       'components/version/version.js',
       'components/version/version-directive.js',
       'components/version/interpolate-filter.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['experiments']);
     });
   </script>
   <title>My AngularJS App</title>
@@ -45,7 +45,7 @@
 </head>
 <body ng-cloak>
   <ul class="menu">
-    <li><a href="#/view1">Actors Search</a></li>
+    <li><a href="#/view">Actors Search</a></li>
   </ul>
 
   <div ng-view></div>
