--- a/app/index-async.html
+++ b/app/index-async.html
@@ -40,7 +40,7 @@
       angular.bootstrap(document, ['experiments']);
     });
   </script>
-  <title>My AngularJS App</title>
+  <title>AngularJS experiments</title>
   <link rel="stylesheet" href="app.css">
 </head>
 <body ng-cloak>
