--- a/app/index-async.html
+++ b/app/index-async.html
@@ -31,10 +31,7 @@
       'bower_components/angular/angular.js',
       'bower_components/angular-route/angular-route.js',
       'app.js',
-      'actors-search/view.js',
-      'components/version/version.js',
-      'components/version/version-directive.js',
-      'components/version/interpolate-filter.js'
+      'actors-search/view.js'
     ], function() {
       // when all is done, execute bootstrap angular application
       angular.bootstrap(document, ['experiments']);
